# voice-revive

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: dartdoc.yml
AudioProcessorGraphCompGain/: AudioProcessorGraphCompGain.jucer
AudioProcessorGraphCompGain/Source/: CompressorProcessor.cpp  CompressorProcessor.h  GainProcessor.cpp  GainProcessor.h  MultCompressorProcessor.cpp  MultCompressorProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  ProcessorBase.h  (+1 more)
GainEQProcessor/: GainEQProcessor.jucer
Juce/AudioProcessor/: AudioProcessor.jucer  CMakeLists.txt
Juce/AudioProcessor/Builds/Android/: settings.gradle
Juce/AudioProcessor/Builds/Android/lib/: CMakeLists.txt  build.gradle
Juce/AudioProcessor/Builds/VisualStudio2022/: AudioProcessor.sln  AudioProcessor_DynamicLibrary.vcxproj  AudioProcessor_DynamicLibrary.vcxproj.filters  GlobalFunctions.cpp  GlobalFunctions.h  functionsInterface.cpp  resources.rc
Juce/AudioProcessor/Builds/VisualStudio2022/x64/Debug/Dynamic Library/: AudioProcessor.dll.recipe  AudioProcessor_DynamicLibrary.vcxproj.FileListAbsolute.txt  resources.res
Juce/AudioProcessor/JuceLibraryCode/: AppConfig.h  JuceHeader.h
Juce/AudioProcessor/Source/: CompGainEQ.cpp  CompGainEQ.h  GlobalFunction.cpp  GlobalFunction.h
doc/: app-architecture.drawio
docs/: __404error.html  categories.json  index.html  index.json  search.html
flutter/: pubspec.yaml
flutter_hello_world/: .gitignore
revoiceme/: .gitignore  README.md  analysis_options.yaml  dartdoc_options.yaml  pubspec.yaml
revoiceme_juce/: revoiceme_juce.jucer
(+468 files in other folders)
